Created the Displayable class
Created a class of items that can be displayed on the screen.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,33 @@ Chess-2.vcxproj.user
 .vs/Chess-2/v17/.suo
 .vs/Chess-2/v17/DocumentLayout.json
 assets/asset-dev.psd
+.vs/Chess-2/v17/Solution.VC.db
+.vs/Chess-2/v17/ipch/AutoPCH/ca4adcafa462d65/UTILS.ipch
+.vs/Chess-2/v17/ipch/AutoPCH/c80674b7ed32af81/STB_IMAGE.ipch
+.vs/Chess-2/v17/ipch/AutoPCH/795cac7477f6430d/DISPLAYABLE.ipch
+.vs/Chess-2/v17/ipch/AutoPCH/54bef5096f192fd/MAIN.ipch
+.vs/Chess-2/v17/DocumentLayout.backup.json
+.vs/Chess-2/FileContentIndex/d450ca81-c547-483a-a947-286a59102544.vsidx
+.vs/Chess-2/FileContentIndex/d2333a1c-8d45-43a0-8e9b-3d74947c4d1e.vsidx
+.vs/Chess-2/FileContentIndex/b58f5675-a382-4c43-a6f1-d4ebb22b27c1.vsidx
+.vs/Chess-2/FileContentIndex/88910fe8-271f-4d03-9469-f5e8423f3577.vsidx
+.vs/Chess-2/FileContentIndex/41e06952-8615-4020-9c25-18a811d2befe.vsidx
+Chess-2/x64/Debug/Chess-2.exe.recipe
+Chess-2/x64/Debug/Chess-2.ilk
+Chess-2/x64/Debug/Chess-2.log
+Chess-2/x64/Debug/Chess-2.tlog/Chess-2.lastbuildstate
+Chess-2/x64/Debug/Chess-2.tlog/CL.command.1.tlog
+Chess-2/x64/Debug/Chess-2.tlog/Cl.items.tlog
+Chess-2/x64/Debug/Chess-2.tlog/CL.read.1.tlog
+Chess-2/x64/Debug/Chess-2.tlog/CL.write.1.tlog
+Chess-2/x64/Debug/Chess-2.tlog/link.command.1.tlog
+Chess-2/x64/Debug/Chess-2.tlog/link.read.1.tlog
+Chess-2/x64/Debug/Chess-2.tlog/link.secondary.1.tlog
+Chess-2/x64/Debug/Chess-2.tlog/link.write.1.tlog
+Chess-2/x64/Debug/main.obj
+Chess-2/x64/Debug/stb_image.obj
+Chess-2/x64/Debug/vc143.idb
+Chess-2/x64/Debug/vc143.pdb
+x64/Debug/Chess-2.exe
+x64/Debug/Chess-2.pdb
+SDL2.dll
